--- a/i18n/pom.xml
+++ b/i18n/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent_2.11</artifactId>
-    <version>4.4.6</version>
+    <version>4.4.7-SNAPSHOT</version>
   </parent>
   <artifactId>beangle-commons-i18n_2.11</artifactId>
   <packaging>jar</packaging>
